Version 0.2.X - Release date 2007-??-??
-----------------------------------------------------

- Relative basedir in build.xml
- Use JAVA_HOME environment variable for ant build java dependencies. Example from shell: JAVA_HOME=/usr/lib/jvm/java-1.5.0-sun ant all
- All files created during the make process are now in .cvsignore
- INF pointer type is now 64-bit (long) for AMD64 support
- fix: auto-connecting output ports now works
- added utility clients JJackPlayer and JJackRecorder in new package de.gulden.framework.jjack.util
- added benchmark tool in de.gulden.framework.jjack.util.benchmark
- (PJS) ability to load native library from local lib folder (failover if libjjack.so not present in system library path)
- (PJS) Now can be launched as an Eclipse project
- (PJS) Added JJackQuickClientLaunch which lets you select the client to launch from a dropdown